CHANGELOG for Close Combat Free.

Quite a lot of basic engine stuff was done before this changelog was created. Some more history can be devised from git sources (although even there, the thing is not complete).

=== === === ===
30.11.2011:
 - add sliding BottomMenu (pretty crude implementation, but works)
 - add soldier menu
 - add single soldiers within a unit

29.11.2011:
 - add stop to context menu entry
 - make context menu grid based
 - add zoom in and zoom out keyboard binding ('=' and '-' respectively)
 - parametrised SimpleInfoBox
 - add TopMenu (with new ZoomBox, MenuEntry, PopUpArrow elements)
 - add "Follow" to context menu
 - double click on gameArea now stops following

28.11.2011:
 - add SimpleInfoBox to gui - useful for displaying short messages
 - add pause info box
 - add centering view on a unit (when double clicking on roster entry)
 - add unit follow status box
 - add unit following
 - fix order cancelling
 - make OrderMarkers remain visible even when unit is deselected

27.11.2011:
 - context menu now openes on mouse hold in mobile mode
 - double click in roster now opens context menu
 - add config file, it's parser and root context object.
   Adjust QML to use the new config system
 - add default config file as fallback when there are problems in the main
   one
 - add QML scene resizing together with window
 - add zooming to game area
 - context menu is readjusted to show appropriately when game area is zoomed
 - change roster menu into a QML Grid element

26.11.2011:
 - add drag&drop for OrderMarkers
 - add order cancelling
 - add map scrolling
 - add some keyboard shortcuts
 - add active pause

25.11.2011:
 - fix group orders mixing their targets
 - add desktop mode and mobile mode (initial, simple implementation. There are plans to make it much
   more robust)

24.11.2011:
 - move trialengine2d out of trial and into master

20.11.2011:
 - add order markers

19.11.2011: